Adding process to add reCaptcha to forms
Adding a way to add reCaptcha to form to prevent form spamming

--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,12 @@
       "email": "admin@akkaweb.com"
     }
   ],
+    "require": {
+        "google/recaptcha": "@stable"
+    },
   "require-dev": {
     "phpunit/phpunit": "*"
+    
   },
   "autoload": {
     "psr-4": {
